--- a/pages/colorimetria.html
+++ b/pages/colorimetria.html
@@ -36,6 +36,9 @@
             <li class="nav-item">
               <a class="nav-link" href="../pages/registro.html">Registro</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" id="desaparece" href="./pages/login.html" onclick="logout()">Cerrar Sesion</a>
+            </li>
           </ul>
         </div>
       </div>
