--- a/pages/login.html
+++ b/pages/login.html
@@ -27,6 +27,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Cálculo Glucosa</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../pages/colorimetria.html">Guia de colores</a>
             </li>
             <li class="nav-item">
