--- a/pages/colorimetria.html
+++ b/pages/colorimetria.html
@@ -55,12 +55,12 @@
         <img src="../assets/color-bajo.jpg" class="img-fluid">
         <p>Cantidad de glucosa en sangre de 70 a 100 mg/dL</p>
         <img src="../assets/color-normal.jpg" class="img-fluid">
-        <p>Cantidad de glucosa en sangre mayor a 140 mg/dL</p>
+        <p>Cantidad de glucosa en sangre menores o igual a 140 mg/dL</p>
         <img src="../assets/color-max.jpg" class="img-fluid">
         <p class="niveles">Diabetes:</p>
         <p>Cantidad de glucosa en sangre de 80 a 130 mg/dL</p>
-        <img src="../assets/color-normal.jpg" class="img-fluid">
-        <p>Cantidad de glucosa en sangre mayor a 180 mg/dL</p>
+        <img src="../assets/color-max.jpg" class="img-fluid">
+        <p>Cantidad de glucosa en sangre menores o igual a 180 mg/dL</p>
         <img src="../assets/color-max.jpg" class="img-fluid">
       </div>
       <button id="downloadBtn" class="btn btn-primary">Descargar PDF</button>
