--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <h1 class="titulo navbar-brand mb-0 h1" href="./index.html">Niveles de glucosa</h1>
+        <h1 class="titulo navbar-brand mb-0 h1" href="./index.html">Glucose Levels</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,19 +26,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Calculo Glucosa</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Glucose Determination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/colorimetria.html">Guia de colores</a>
+              <a class="nav-link" href="./pages/colorimetria.html">Color Guide</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-none" id="aparece" href="./pages/registro.html">Registro</a>
+              <a class="nav-link d-none" id="aparece" href="./pages/registro.html">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  d-none" id="aparece1" href="./pages/login.html">Iniciar Sesion</a>
+              <a class="nav-link  d-none" id="aparece1" href="./pages/login.html">Log in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="desaparece" href="./pages/login.html" onclick="logout()">Cerrar Sesion</a>
+              <a class="nav-link" id="desaparece" href="./pages/login.html" onclick="logout()">Log out</a>
             </li>
           </ul>
         </div>
@@ -59,11 +59,10 @@
           <div id="statusText" class="intensity-container"></div>
         </div>
         <div class="file-select">
-          <label for="fileInput" id="boton-file" class="file-label">Medir Glucosa</label>
+          <label for="fileInput" id="boton-file" class="file-label">Measure Glucose</label>
           <input type="file" name="src-file" id="fileInput" accept="image/*" style="display: none;">
           <button id="backButton" class="btn d-none">Back</button>
-          <button id="loginButton" class="btn d-none"><a href="./pages/login.html" class="link">Inicar
-              Sesion</a></button>
+          <button id="loginButton" class="btn d-none"><a href="./pages/login.html" class="link">Log in</a></button>
         </div>
       </div>
     </div>
