--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="row">
     <div id="app" class="container">
       <div class="hijo">
-        <canvas id="outputCanvas" ></canvas>
+        <canvas id="outputCanvas" class="d-none"></canvas>
         <div id="colorIntensity" class="d-none"></div>
         <div class="intensity-container">
           <canvas id="intensityCanvas" width="200" height="200"></canvas>
