--- a/pages/colorimetria.html
+++ b/pages/colorimetria.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="titulo navbar-brand mb-0 h1" href="../index.html">Niveles de glucosa</a>
+        <a class="titulo navbar-brand mb-0 h1" href="../index.html">Glucose Level</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -28,16 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Cálculo Glucosa</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Glucose Determination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/login.html">Iniciar Sesion</a>
+              <a class="nav-link" href="../pages/login.html">Log in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/registro.html">Registro</a>
+              <a class="nav-link" href="../pages/registro.html">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="desaparece" href="./pages/login.html" onclick="logout()">Cerrar Sesion</a>
+              <a class="nav-link" id="desaparece" href="./pages/login.html" onclick="logout()">Log out</a>
             </li>
           </ul>
         </div>
@@ -48,22 +48,22 @@
   <div class="row" id="contenedor">
     <div id="app" class="container">
       <div id="contentToConvert" class="hijo">
-        <h2 class="titulo">Guía de Colorimetría</h2>
-        <h3>Información sobre Niveles de Glucosa</h3>
+        <h2 class="titulo">Colorimetry Guide</h2>
+        <h3>Information on Glucose Levels</h3>
         <p class="niveles">General:</p>
-        <p>Cantidad de glucosa en sangre menores a 70 mg/dL</p>
+        <p>Blood glucose levels lower than 70 mg/dL</p>
         <img src="../assets/color-bajo.jpg" class="img-fluid">
-        <p>Cantidad de glucosa en sangre de 70 a 100 mg/dL</p>
+        <p>Blood glucose levels between 70 and 100 mg/dL</p>
         <img src="../assets/color-normal.jpg" class="img-fluid">
-        <p>Cantidad de glucosa en sangre menores o igual a 140 mg/dL</p>
+        <p>Blood glucose levels less than or equal to 140 mg/dL</p>
         <img src="../assets/color-max.jpg" class="img-fluid">
         <p class="niveles">Diabetes:</p>
-        <p>Cantidad de glucosa en sangre de 80 a 130 mg/dL</p>
+        <p>Blood glucose levels between 80 and 130 mg/dL</p>
         <img src="../assets/color-max.jpg" class="img-fluid">
-        <p>Cantidad de glucosa en sangre menores o igual a 180 mg/dL</p>
+        <p>Blood glucose levels less than or equal to 180 mg/dL</p>
         <img src="../assets/color-max.jpg" class="img-fluid">
       </div>
-      <button id="downloadBtn" class="btn btn-primary">Descargar PDF</button>
+      <button id="downloadBtn" class="btn btn-primary">Download PDF</button>
     </div>
   </div>
 
